# autoemulate

./: .all-contributorsrc  .buildinfo  .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.toml  data.json  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements.txt  run_benchmark.sh  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: black.yaml  ci.yaml  coverage.yaml  docs.yaml  draft-pdf.yaml  github-repo-stats.yml  precommit.yaml  release.yaml  tests.yaml
_build/logs/: myst.build.json
_downloads/3b423627fe21976c3c06e60f78e14ae1/: LICENSE
_modules/: index.html
_modules/autoemulate/: compare.html  datasets.html  experimental_design.html  history_matching.html  metrics.html  plotting.html  utils.html
_sources/: index.md  installation.md
_sources/community/: contributing-docs.md  contributing-emulators.md
_sources/getting-started/: index.md  installation.md  quickstart.ipynb
_sources/reference/: cross_validate.rst  hyperparam_searching.rst  plotting.rst  (+2 more)
autoemulate/: __init__.py  compare.py  cross_validate.py  cv.py  data_splitting.py  datasets.py  emulators.py  experimental_design.py  experimenters.py  history_matching.py  history_matching_dashboard.py  history_matching_visualisation.py  hyperparam_search.py  hyperparam_searching.py  logging_config.py  mcmc.py  mcmc_dashboard.py  metrics.py  mle.py  model_processing.py  model_registry.py  plotting.py  preprocess_target.py  printing.py  save.py  sensitivity_analysis.py  types.py  utils.py
benchmarks/: README.md  benchmark.py  benchmarks_simple.ipynb  plot_benchmark.ipynb  run_benchmark.sh  transformed_emulator_sampling_vs_analytic.ipynb
case_studies/: README.md  sir_seir_model_comparison.ipynb
case_studies/blood_pressure/: ModularCirc.ipynb  README.md  calibration_workflow.py  cardiac_simulator.py  naghavi.py  naghavi_model_parameters.json  pyproject.toml  simulator.py
case_studies/blood_pressure/simulator/: naghavi.py
case_studies/patient_calibration/: README.md  cardiac_simulator.py  patient_calibration_case_study.ipynb  patient_calibration_workflow.py  pyproject.toml
community/: code-of-conduct.html  contributing-docs.html  contributing-emulators.html  contributing.html  index.html  release.html
docs/: _config.yml  _toc.yml  conf.py  index.md  installation.md
dtemulate/: compare.py  emulators.py  experimental_design.py
experimental/: active_learning.html
getting-started/: index.html  installation.html  quickstart.html
htmlcov/: class_index.html  d_1723575ec71c99c4___init___py.html  d_1723575ec71c99c4_compare_py.html  d_1723575ec71c99c4_cross_validate_py.html  d_1723575ec71c99c4_cv_py.html  d_1723575ec71c99c4_data_splitting_py.html  d_1723575ec71c99c4_datasets_py.html  d_1723575ec71c99c4_emulators_py.html  d_1723575ec71c99c4_experimental_design_py.html  d_1723575ec71c99c4_hyperparam_search_py.html  d_1723575ec71c99c4_hyperparam_searching_py.html  d_1723575ec71c99c4_logging_config_py.html  d_1723575ec71c99c4_metrics_py.html  d_1723575ec71c99c4_model_processing_py.html  d_1723575ec71c99c4_plotting_py.html  d_1723575ec71c99c4_printing_py.html  d_1723575ec71c99c4_save_py.html  d_1723575ec71c99c4_utils_py.html  d_459436da478b2100___init___py.html  d_459436da478b2100_base_py.html  d_459436da478b2100_get_module_py.html  d_459436da478b2100_mlp_py.html  d_459436da478b2100_rbf_py.html  d_877d41b3ae2d066b___init___py.html  d_877d41b3ae2d066b_base_py.html  d_877d41b3ae2d066b_gaussian_process2_py.html  d_877d41b3ae2d066b_gaussian_process_mogp_py.html  d_877d41b3ae2d066b_gaussian_process_py.html  d_877d41b3ae2d066b_gaussian_process_sk_py.html  d_877d41b3ae2d066b_gradient_boosting_py.html  d_877d41b3ae2d066b_light_gbm_py.html  d_877d41b3ae2d066b_neural_net_sk_py.html  d_877d41b3ae2d066b_neural_net_torch_py.html  d_877d41b3ae2d066b_neural_network_py.html  d_877d41b3ae2d066b_polynomials_py.html  d_877d41b3ae2d066b_radial_basis_py.html  d_877d41b3ae2d066b_random_forest_py.html  d_877d41b3ae2d066b_rbf_py.html  d_877d41b3ae2d066b_second_order_polynomials_py.html  d_877d41b3ae2d066b_support_vector_machines_py.html  (+322 more)
my_tests/: test_01_start.py  test_kernel.ipynb
notebooks/: active_matter.ipynb
paper/: paper.bib  paper.md
reference/: compare.html  cross_validate.html  datasets.html  experimental_design.html  history_matching.html  hyperparam_searching.html  index.html  logging_config.html  metrics.html  model_processing.html  plotting.html  printing.html  save.html  sensitivity_analysis.html  utils.html
scripts/: benchmark.py  run_trainer.sh  run_trainer_advection_diffusion.sh  run_trainer_bout.sh  run_trainer_reaction_diffusion.sh  run_trainer_turbulent_radiative_layer_2d.sh
tests/: conftest.py  emulators.py  test_attn_cnp.py  test_base.py  test_base_simulator.py  test_cnp.py  test_cnp_dataset.py  test_compare.py  test_cross_validate.py  test_data_splitting.py  test_datasets.py  test_device.py  test_emulators.py  test_end_to_end.py  test_estimators.py  test_experimental_base.py  test_experimental_compare.py  test_experimental_design.py  test_experimental_history_matching.py  test_experimental_lightgbm.py  test_experimental_tune.py  test_experimental_utils.py  test_gaussian_process_utils.py  test_history_matching.py  test_hyperparam_search.py  test_hyperparam_searching.py  test_learners.py  test_logging_config.py  test_model_processing.py  test_model_registry.py  test_plotting.py  test_polynomials.py  test_preprocess_target.py  test_printing.py  test_pytorch_gp.py  test_pytorch_utils.py  test_radial_basis_functions.py  test_save.py  test_sensitivity_analysis.py  test_svm.py  (+5 more)
tutorials/: 01_start.html  02_speed.html  03_emulation_sensitivity.html  04_active_learning.html  05_reaction_diffusion.html  07_AE_workflow.html  index.html
v0/: experimental_design.py  history_matching.py  plotting.py  preprocess_target.py  sensitivity_analysis.py  utils.py
well/: helmholtz_staircase.ipynb
(+1473 files in other folders)
