[project]
name = "autox"
version = "0.0.1"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.uv.sources]
autoemulate = { path = "autox/autoemulate" }

# Whether to have a combined virtual workspace with single lock or a lock per package
[tool.uv.workspace]
members = ["autox/*"]
# Can just exclude a single package from the combined workspace too
exclude = ["autox/autoemulate"]
